<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/list_item_bg"
    android:orientation="vertical" >

    <com.shopper.app.custom.controls.CustomTextView
        android:id="@+id/tvOnlinePaymentModeHeadingText"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@drawable/tool_bar"
        android:text="@string/onlinepaymentstep2"
        android:textColor="@color/black" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tvOnlinePaymentModeHeadingText" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/list_item_bg"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rlInvoice"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <com.shopper.app.custom.controls.CustomTextView
                    android:id="@+id/tvForPay"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="left"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <com.shopper.app.custom.controls.CustomTextView
                    android:id="@+id/tvReadTermsConditions"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="9dp"
                    android:layout_toRightOf="@+id/tvForPay"
                    android:autoLink="all"
                    android:paddingLeft="0dp"
                    android:text="@string/hyperlink"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/cbTermsAndCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="30dp"
                    android:button="@layout/custom_checkbox" />
            </RelativeLayout>

            <com.shopper.app.custom.controls.CustomTextView
                android:id="@+id/tvReadTermsConditionsforSpace"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:autoLink="all"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tableLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeSubtotal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/sub_total"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeSubtotalValue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="20dp"
                        android:text="@string/payment_mode_subtotal"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeShipping"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/shipping"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeShippingValue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="20dp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModePackaging"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/packaging"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModePackagingValue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="20dp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeVAT"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/vat"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeVATValue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="20dp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip" >

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeTotal"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.shopper.app.custom.controls.CustomTextView
                        android:id="@+id/tvPaymentModeTotalValue"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingRight="18dp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlOnlinePaymentDeleveryBottomBar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tool_bar" >

        <com.shopper.app.custom.controls.CustomButton
            android:id="@+id/bDibsPayment"
            android:layout_width="@dimen/bottom_bar_icon_width"
            android:layout_height="@dimen/bottom_bar_icon_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:background="@drawable/pay_button_style"
            android:paddingRight="5dp" />

        <com.shopper.app.custom.controls.CustomButton
            android:id="@+id/bCancel2"
            android:layout_width="@dimen/bottom_bar_icon_width"
            android:layout_height="@dimen/bottom_bar_icon_height"
            android:layout_centerVertical="true"
            android:layout_margin="1dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/bDibsPayment"
            android:background="@drawable/cancel"
            android:paddingRight="5dp" />
    </RelativeLayout>

</RelativeLayout>